Aligned cm buttons to bottom of head. Fixed head

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -14,6 +14,10 @@ body {
   display: none;
 }
 
+.top-heading {
+  margin-top: 120px;
+}
+
 #contact {
   display: none;
 }
@@ -27,18 +31,25 @@ header {
   background-color: #2f2f2f;
   background-image: url("../images/city-background-10-mobile.jpeg");
   background-size: cover;
-  height: 90vh;
+  height: 100vh;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
+  margin-bottom: -100px;
 }
 
+.child-page {
+  height: 55vh;
+}
+
+
+
 .portrait-pic {
-  margin-top: 1em;
   border-radius: 100%;
   border: 1px solid black;
   padding: 0px;
   width: 50%;
+  margin-top: 120px;
 }
 
 header .title {
@@ -63,7 +74,7 @@ header .title h3 {
   background-color: rgba(32, 33, 33, 0.8);
   text-align: center;
   position: absolute;
-  bottom: 1em;
+  bottom: 0em;
   left: 0;
   right: 0;
   letter-spacing: .5em;
